--- a/Dockerfile-Web
+++ b/Dockerfile-Web
@@ -8,7 +8,8 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-RUN apt-get update && apt-get install -q -y --no-install-recommends \
+RUN sed -i 's/deb.debian.org/mirrors.aliyun.com/g' /etc/apt/sources.list \
+    && apt-get update && apt-get install -q -y --no-install-recommends \
     procps \
     net-tools \
     && rm -rf /var/lib/apt/lists/*
